@@ -113,7 +113,12 @@ void SceneryGroupObject::UpdateEntryIndexes()
             continue;
 
         auto entryIndex = objectManager.GetLoadedObjectEntryIndex(ori->LoadedObject.get());
-        Guard::Assert(entryIndex != OBJECT_ENTRY_INDEX_NULL, GUARD_LINE);
+        if (entryIndex == OBJECT_ENTRY_INDEX_NULL)
+        {
+            // Some parks have manually deleted objects from the save so they might not be loaded
+            // silently remove the object from the SceneryGroupObject
+            continue;
+        }
 
         auto sceneryType = GetSceneryType(ori->Type);
         if (sceneryType.has_value())
