@@ -15,6 +15,7 @@
 - Fix: [#17508] Grid doesn’t disable after setting patrol area.
 - Fix: [#17533] Missing audio when specifying ‘--rct2-data-path’.
 - Fix: [#17553] Crash when moving invention list items to empty list.
+- Fix: [#17605] Crash when opening parks which have had objects removed externally.
 
 0.4.1 (2022-07-04)
 ------------------------------------------------------------------------
